// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot admin 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light bg-light"
>
  <div
    className="brand container"
  >
    <a
      className="navbar-brand"
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Bee logo"
        className="d-inline-block align-top"
        height="50"
        src="bee.png"
        width="50"
      />
    </a>
  </div>
  <div
    className="justify-content-center container"
  >
    <a
      className="navLink nav-link"
      href="#"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      Logout
    </a>
    <a
      className="navLink nav-link"
      disabled={false}
      href="/contacts"
      onClick={[Function]}
    >
      Contacts
    </a>
    <a
      className="navLink nav-link"
      disabled={false}
      href="/add-product"
      onClick={[Function]}
    >
      Add Product
    </a>
    <a
      className="navLink nav-link"
      disabled={false}
      href="/add-subcategory"
      onClick={[Function]}
    >
      Add Subcategory
    </a>
  </div>
  <div
    className="user container"
  >
    <span
      className="navbar-text"
    >
      Welcome 
      admin
    </span>
  </div>
  
</nav>
`;

exports[`matches snapshot client 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light bg-light"
>
  <div
    className="brand container"
  >
    <a
      className="navbar-brand"
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Bee logo"
        className="d-inline-block align-top"
        height="50"
        src="bee.png"
        width="50"
      />
    </a>
  </div>
  <div
    className="justify-content-center container"
  >
    <a
      className="navLink nav-link"
      href="#"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      Logout
    </a>
    <a
      className="navLink nav-link"
      disabled={false}
      href="/contacts"
      onClick={[Function]}
    >
      Contacts
    </a>
    
  </div>
  <div
    className="user container"
  >
    <span
      className="navbar-text"
    >
      Welcome 
      anton
    </span>
  </div>
  <button
    className="btn btn-warning"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <b>
      Shopping cart
    </b>
     products 
    <b>
      2
    </b>
  </button>
</nav>
`;

exports[`matches snapshot without user 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light bg-light"
>
  <div
    className="brand container"
  >
    <a
      className="navbar-brand"
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Bee logo"
        className="d-inline-block align-top"
        height="50"
        src="bee.png"
        width="50"
      />
    </a>
  </div>
  <div
    className="justify-content-center container"
  >
    <a
      className="navLink nav-link"
      disabled={false}
      href="/login"
      onClick={[Function]}
    >
      Login
    </a>
    <a
      className="navLink nav-link"
      disabled={false}
      href="/register"
      onClick={[Function]}
    >
      Register
    </a>
    <a
      className="navLink nav-link"
      disabled={false}
      href="/contacts"
      onClick={[Function]}
    >
      Contacts
    </a>
    
  </div>
  
  
</nav>
`;
